CHANGES.txt - 04/14/2002
------------------------

CHANGES IN CUPS V1.2.0a1

	- Updated the printer test page with a better color
	  wheel and a separate grayscale ramp.
	- The IPP and HTTP functions are now provided in a
	  separate library (libipp).
	- A single backend process is now run to send all print
	  data for a job.
	- Backends and filters can now send and receive
	  backchannel data over file descriptor 3.
	- Added support for ICC and CIE colorspaces in RIPs.
	- Updated the raster stream format to support more
	  user-defined attributes and to do compression of the
	  page data.
	- New ippReadFile(), ippReadIO(), ippWriteFile(), and
	  ippWriteIO() functions in CUPS API.
	- Removed fonts and GNU Ghostscript code from base CUPS
	  distribution; these are now available as part of ESP
	  Ghostscript, or by patching GNU Ghostscript using the
	  patches in the pstoraster directory.
	- Added Cookie, Expect, and Set-Cookie fields to HTTP
	  request structure.