@@ -1,104 +1,87 @@
 # DO NOT DELETE
 
-auth.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-auth.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-auth.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-auth.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h printers.h
-auth.o: classes.h job.h conf.h banners.h dirsvc.h network.h
-banners.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-banners.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-banners.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-banners.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h
-banners.o: printers.h classes.h job.h conf.h banners.h dirsvc.h network.h
-cert.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-cert.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-cert.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-cert.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h printers.h
-cert.o: classes.h job.h conf.h banners.h dirsvc.h network.h
-classes.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-classes.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-classes.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-classes.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h
-classes.o: printers.h classes.h job.h conf.h banners.h dirsvc.h network.h
-client.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-client.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-client.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-client.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h
-client.o: printers.h classes.h job.h conf.h banners.h dirsvc.h network.h
-conf.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-conf.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-conf.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-conf.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h printers.h
-conf.o: classes.h job.h conf.h banners.h dirsvc.h network.h
-devices.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-devices.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-devices.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-devices.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h
-devices.o: printers.h classes.h job.h conf.h banners.h dirsvc.h network.h
-dirsvc.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-dirsvc.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-dirsvc.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-dirsvc.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h
-dirsvc.o: printers.h classes.h job.h conf.h banners.h dirsvc.h network.h
-main.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-main.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-main.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-main.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h printers.h
-main.o: classes.h job.h conf.h banners.h dirsvc.h network.h
-ipp.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-ipp.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-ipp.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-ipp.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h printers.h
-ipp.o: classes.h job.h conf.h banners.h dirsvc.h network.h
-listen.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-listen.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-listen.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-listen.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h
-listen.o: printers.h classes.h job.h conf.h banners.h dirsvc.h network.h
-job.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-job.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-job.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-job.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h printers.h
-job.o: classes.h job.h conf.h banners.h dirsvc.h network.h
-log.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-log.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-log.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-log.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h printers.h
-log.o: classes.h job.h conf.h banners.h dirsvc.h network.h
-network.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-network.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-network.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-network.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h
-network.o: printers.h classes.h job.h conf.h banners.h dirsvc.h network.h
-ppds.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-ppds.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-ppds.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-ppds.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h printers.h
-ppds.o: classes.h job.h conf.h banners.h dirsvc.h network.h
-printers.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-printers.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-printers.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-printers.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h
-printers.o: printers.h classes.h job.h conf.h banners.h dirsvc.h network.h
-quotas.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-quotas.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-quotas.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-quotas.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h
-quotas.o: printers.h classes.h job.h conf.h banners.h dirsvc.h network.h
-server.o: cupsd.h ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-server.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
-server.o: ../config.h mime.h ../cups/http.h ../ipp/http.h ../cups/ipp.h
-server.o: ../cups/language.h ../cups/debug.h cert.h client.h auth.h
-server.o: printers.h classes.h job.h conf.h banners.h dirsvc.h network.h
+auth.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
+auth.o: ../config.h mime.h ../cups/language.h ../cups/debug.h cert.h client.h
+auth.o: auth.h policy.h printers.h classes.h job.h conf.h banners.h dirsvc.h
+auth.o: network.h
+banners.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h
+banners.o: ../ipp/string.h ../config.h mime.h ../cups/language.h
+banners.o: ../cups/debug.h cert.h client.h auth.h policy.h printers.h
+banners.o: classes.h job.h conf.h banners.h dirsvc.h network.h
+cert.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
+cert.o: ../config.h mime.h ../cups/language.h ../cups/debug.h cert.h client.h
+cert.o: auth.h policy.h printers.h classes.h job.h conf.h banners.h dirsvc.h
+cert.o: network.h
+classes.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h
+classes.o: ../ipp/string.h ../config.h mime.h ../cups/language.h
+classes.o: ../cups/debug.h cert.h client.h auth.h policy.h printers.h
+classes.o: classes.h job.h conf.h banners.h dirsvc.h network.h
+client.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h
+client.o: ../ipp/string.h ../config.h mime.h ../cups/language.h
+client.o: ../cups/debug.h cert.h client.h auth.h policy.h printers.h
+client.o: classes.h job.h conf.h banners.h dirsvc.h network.h
+conf.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
+conf.o: ../config.h mime.h ../cups/language.h ../cups/debug.h cert.h client.h
+conf.o: auth.h policy.h printers.h classes.h job.h conf.h banners.h dirsvc.h
+conf.o: network.h
+devices.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h
+devices.o: ../ipp/string.h ../config.h mime.h ../cups/language.h
+devices.o: ../cups/debug.h cert.h client.h auth.h policy.h printers.h
+devices.o: classes.h job.h conf.h banners.h dirsvc.h network.h
+dirsvc.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h
+dirsvc.o: ../ipp/string.h ../config.h mime.h ../cups/language.h
+dirsvc.o: ../cups/debug.h cert.h client.h auth.h policy.h printers.h
+dirsvc.o: classes.h job.h conf.h banners.h dirsvc.h network.h
+main.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
+main.o: ../config.h mime.h ../cups/language.h ../cups/debug.h cert.h client.h
+main.o: auth.h policy.h printers.h classes.h job.h conf.h banners.h dirsvc.h
+main.o: network.h
+ipp.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
+ipp.o: ../config.h mime.h ../cups/language.h ../cups/debug.h cert.h client.h
+ipp.o: auth.h policy.h printers.h classes.h job.h conf.h banners.h dirsvc.h
+ipp.o: network.h
+listen.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h
+listen.o: ../ipp/string.h ../config.h mime.h ../cups/language.h
+listen.o: ../cups/debug.h cert.h client.h auth.h policy.h printers.h
+listen.o: classes.h job.h conf.h banners.h dirsvc.h network.h
+job.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
+job.o: ../config.h mime.h ../cups/language.h ../cups/debug.h cert.h client.h
+job.o: auth.h policy.h printers.h classes.h job.h conf.h banners.h dirsvc.h
+job.o: network.h
+log.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
+log.o: ../config.h mime.h ../cups/language.h ../cups/debug.h cert.h client.h
+log.o: auth.h policy.h printers.h classes.h job.h conf.h banners.h dirsvc.h
+log.o: network.h
+network.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h
+network.o: ../ipp/string.h ../config.h mime.h ../cups/language.h
+network.o: ../cups/debug.h cert.h client.h auth.h policy.h printers.h
+network.o: classes.h job.h conf.h banners.h dirsvc.h network.h
+policy.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h
+policy.o: ../ipp/string.h ../config.h mime.h ../cups/language.h
+policy.o: ../cups/debug.h cert.h client.h auth.h policy.h printers.h
+policy.o: classes.h job.h conf.h banners.h dirsvc.h network.h
+ppds.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
+ppds.o: ../config.h mime.h ../cups/language.h ../cups/debug.h cert.h client.h
+ppds.o: auth.h policy.h printers.h classes.h job.h conf.h banners.h dirsvc.h
+ppds.o: network.h
+printers.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h
+printers.o: ../ipp/string.h ../config.h mime.h ../cups/language.h
+printers.o: ../cups/debug.h cert.h client.h auth.h policy.h printers.h
+printers.o: classes.h job.h conf.h banners.h dirsvc.h network.h
+quotas.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h
+quotas.o: ../ipp/string.h ../config.h mime.h ../cups/language.h
+quotas.o: ../cups/debug.h cert.h client.h auth.h policy.h printers.h
+quotas.o: classes.h job.h conf.h banners.h dirsvc.h network.h
+server.o: cupsd.h ../cups/cups.h ../cups/ppd.h ../cups/string.h
+server.o: ../ipp/string.h ../config.h mime.h ../cups/language.h
+server.o: ../cups/debug.h cert.h client.h auth.h policy.h printers.h
+server.o: classes.h job.h conf.h banners.h dirsvc.h network.h
 filter.o: ../cups/string.h ../ipp/string.h ../config.h mime.h
 mime.o: ../cups/string.h ../ipp/string.h ../config.h mime.h
 type.o: ../cups/string.h ../ipp/string.h ../config.h mime.h ../cups/debug.h
-cups-lpd.o: ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-cups-lpd.o: ../ipp/md5.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
+cups-lpd.o: ../cups/cups.h ../cups/ppd.h ../cups/string.h ../ipp/string.h
 cups-lpd.o: ../config.h ../cups/language.h
-cups-polld.o: ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-cups-polld.o: ../ipp/md5.h ../cups/ppd.h ../cups/language.h ../cups/string.h
-cups-polld.o: ../ipp/string.h ../config.h
+cups-polld.o: ../cups/cups.h ../cups/ppd.h ../cups/language.h
+cups-polld.o: ../cups/string.h ../ipp/string.h ../config.h
 testmime.o: mime.h
-testspeed.o: ../cups/cups.h ../cups/ipp.h ../ipp/ipp.h ../ipp/http.h
-testspeed.o: ../ipp/md5.h ../cups/ppd.h ../cups/language.h ../cups/debug.h
+testspeed.o: ../cups/cups.h ../cups/ppd.h ../cups/language.h ../cups/debug.h
